addded functionality and animation, weird z-index issue on nav after anmiation though

--- a/exercise_1/_scss/_variables/colors.scss
+++ b/exercise_1/_scss/_variables/colors.scss
@@ -1,4 +1,4 @@
-$primary: #4264aa;
+$primary: #DE1B1B;
 $gray: #595959;
 $dark-gray: #363636;
 $light-gray: #a6a6a6;
