--- a/exercise_1/_scss/style.scss
+++ b/exercise_1/_scss/style.scss
@@ -7,11 +7,16 @@
 
 
 
-/*	TYPOGRAPHY
-–––––––––––––––––––––––––––*/
-
 :root {
 	 font-size: 1rem;
+}
+
+::selection {
+  background: lighten($primary, 20%);
+}
+
+::-moz-selection {
+  background: lighten($primary, 20%);
 }
 
 body {
@@ -30,14 +35,8 @@ body {
 		box-sizing: border-box;
 }
 
-h1 {
-		text-align: center;
-		color: #999;
-}
-
-p {
-		text-align: center;
-		color: #999;
+h1, h2, h3, h4, h5, h6, p, label {
+	color: #999;
 }
 
 /*  Sections
@@ -47,10 +46,7 @@ main {
 	flex-direction: column;
 	align-items: flex-start;
 
-
-	// @media(min-width: 96rem) {
-	// 	flex-direction: row;
-	// }
+	margin-top: 5rem;
 }
 
 main > section {
@@ -59,6 +55,12 @@ main > section {
 	width: calc(100% - 2rem);
 	background-color: white;
 	box-shadow: 0 .3rem .6rem rgba(0,0,0,0.16), 0 .3rem .6rem rgba(0,0,0,0.23);
+
+	display: none;
+
+	&.active {
+		display: block;
+	}
 
 }
 
